--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "dependencies": {
         "express": "^4.17.1",
+        "jquery": "^3.5.0",
         "socket.io": "^2.3.0"
     }
 }
